kubernetes/apps/network/traefik/app/metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: network
spec:
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: traefik-internal-network
    app.kubernetes.io/name: traefik
  type: ClusterIP
